2017-09-20 Werner S Freund
  * Added rounding method and improved texAPI table

2017-09-15 Werner S Freund
  * Important bugfix in traverse

2017-09-02 Werner S Freund
  * Fixed loggers not being able to retrieve --output-level since the option
	was being consumed by masterLevel
  * Tagging RingerCore-01-00-12

2017-09-01 Werner S Freund
  * Set git to ignore changes in Makefile.RootCore to allow tags to appear
clean even when there are changes in MakeFile.RootCore
  * Tagging RingerCore-01-00-11

2017-09-01 Werner S Freund
	* Improved git version handling (will optimize for speed later) as a
	Configure instance which can also be parsed and send to remotely to jobs
	which can't access the git version locally.
	* Rearranged cmd_exists to be in Configure
	* Tagging RingerCore-01-00-10

2017-08-25 Werner S Freund
	* Fixed looping newline when nesting many measureLoopTime and progressbars

2017-08-24 Werner S Freund
	* Added straverse and improved select method

2017-08-02 Werner S Freund
	* Fixed globing to use it only if * is found at file name

2017-08-01 Werner S Freund
	* LoopingBounds can be used directly in loops via iter method.

2017-07-31 Werner S Freund
	* expandFolders now deal with path globing 

2017-07-28 Werner S Freund
	* Added EnumStringification methods to retrieve enumeration string/ints
	* Added protection when loading wrong file types
	* Tagging RingerCore-01-00-09

2017-04-30 Werner S Freund
	* Added beamer ignore missing flag.
	* Changed beamer outline format.

2017-04-27 Werner S Freund
	* Fix to handle new numpy version which changed the way the
	fortran_contiguous and c_contiguous flags are set on 2D arrays.
	* Tagging RingerCore-01-00-08.

2017-01-24 Werner S Freund
	* Workaround panda submission issue that adds extra excludeFiles without
	checking if appending a comma is needed.

2017-01-22 Werner S Freund
	* Version also working on the grid.
	* Tagging RingerCore-01-00-07.

2017-01-22 Werner S Freund