@@ -1,7 +1,7 @@
 #!/bin/bash
 
 if test \! -f "$ROOTCOREBIN/../RootCoreMacros/base_env.sh"; then
-  if "$RCM_GRID_ENV" -eq "1"; then
+  if test "$RCM_GRID_ENV" -eq "1"; then
     echo "RootCoreMacros sources are unavailable. Cannot download it from grid." && exit 1;
   fi
   git clone https://github.com/wsfreund/RootCoreMacros.git "$ROOTCOREBIN/.."
@@ -9,7 +9,7 @@ fi
 
 source "$ROOTCOREBIN/../RootCoreMacros/base_env.sh" || { echo "Couldn't load base shell environment." && exit 1; }
 
-if type git >/dev/null 2>&1; then
+if type git >/dev/null 2>/dev/null & test "$RCM_GRID_ENV" -eq "0"; then
   git update-index --assume-unchanged $MAKEFILE
 fi
 
