@@ -1,4 +1,8 @@
 2017-09-20 Werner S Freund
+  * Added multi-core option
+  * Tagging RingerCore-01-00-12
+
+2017-09-20 Werner S Freund
   * Added rounding method and improved texAPI table
 
 2017-09-15 Werner S Freund
@@ -7,7 +11,6 @@
 2017-09-02 Werner S Freund
   * Fixed loggers not being able to retrieve --output-level since the option
 	was being consumed by masterLevel
-  * Tagging RingerCore-01-00-12
 
 2017-09-01 Werner S Freund
   * Set git to ignore changes in Makefile.RootCore to allow tags to appear
